--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
+    "autoprefixer": "^10.4.21",
     "vitepress": "^1.2.11",
     "vue": "^3.3.4"
   },
