--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
+    "@whyframe/core": "^0.1.13",
+    "@whyframe/vue": "^0.1.8",
+    "postcss": "^8.5.6",
     "vitepress": "^1.2.11",
     "vue": "^3.3.4"
   },
