--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "devDependencies": {
     "@types/node": "^20.12.8",
     "less": "^4.4.1",
+    "nprogress": "^0.2.0",
     "postcss": "^8.5.6",
     "vitepress": "^1.6.4",
+    "vitepress-plugin-nprogress": "^0.1.0",
     "vue": "^3.3.4"
   },
   "dependencies": {
