--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "less": "^4.4.1",
     "nprogress": "^0.2.0",
     "postcss": "^8.5.6",
+    "unplugin-vue-jsx": "^0.6.1",
     "vitepress": "^1.6.4",
     "vitepress-plugin-nprogress": "^0.1.0",
     "vue": "^3.3.4"
