--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.57.0",
+    "dayjs": "^1.11.13",
     "yc-design-vue": "^1.1.9"
   }
 }
