--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.57.0",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
     "dayjs": "^1.11.13",
-    "yc-design-vue": "^1.3.8"
+    "yc-design-vue": "^1.4.1"
   }
 }
